corpus/blocks.txt
==============
Numbers (nums)
==============

{0}
{ 0 }
{ 
    0 }

{ 0 
}
{ 
    0 
}
---

(source_file 
  (block (statement (num)))
  (block (statement (num)))
  (block (statement (num)))
  (block (statement (num)))
  (block (statement (num)))
  )
